src/components/ResourceDescription/style.scss
@import "../../theme/bootstrap.overrides/variables.scss";

.resourceDescription {
  position: relative;
  width: 100%;
  &:global(.whiteSink) {
    margin-bottom: 10px;
  }
  .header {
    z-index: 2001;
    position: absolute;
    top: -20px;
    left: 0;
    right: 0;

    display: flex;
    justify-content: center;
    .iri {
      color: $custom3;
      padding: 5px 15px;
      justify-content: center;
      background-color: $custom4;
      background: linear-gradient(173deg, $custom4, #078ac5);

      box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.1), 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0;
      a {
        color: $custom3;
        font-size: 22px;
        margin-top: 0;
        margin-bottom: 0;
      }
    }
  }
}
.overlay {
  background-color: rgba(0, 0, 0, 0.5);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2000;
}

